tests/tests/riscv/fail_no_unsafe.stderr
error: expected `unsafe`
 --> tests/riscv/fail_no_unsafe.rs:1:19
  |
1 | #[riscv::pac_enum(InterruptNumber)]
  |                   ^^^^^^^^^^^^^^^
